# votive-svc-storage

./: .cspell.project-words.txt  .editorconfig  .gitignore  Makefile  README.md
.cargo-husky/hooks/: pre-commit
.github/workflows/: rust_ci.yml  sanity_checks.yml
client/: Cargo.toml
client/src/: grpc.rs  lib.rs
docs/: conops.md  icd.md  sdd.md
proto/: grpc.proto
server/: Cargo.toml  build.rs
server/src/: grpc.rs  main.rs
