[package]
edition = "2021"
name    = "votive-svc-storage"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost       = "0.11.0"
surrealdb   = "1.0.0-beta.7"
tonic       = "0.8.1"
tonic-types = "0.6.0"

[build-dependencies]
tonic-build = "0.8.0"

[dev-dependencies.cargo-husky]
default-features = false          # Disable features which are enabled by default
features         = ["user-hooks"]
version          = "1"
